samples/_failures_safe/1761702952_f64366_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d046e096.c: In function ‘main’:
./samples/SAFE/__tmp_d046e096.c:156:29: error: missing terminating " character
  156 |             fprintf(stderr, "
      |                             ^
./samples/SAFE/__tmp_d046e096.c:156:13: error: expected expression at end of input
  156 |             fprintf(stderr, "
      |             ^~~~~~~
./samples/SAFE/__tmp_d046e096.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d046e096.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d046e096.c:156:13: error: expected declaration or statement at end of input
